--- a/public/blog.html
+++ b/public/blog.html
@@ -25,7 +25,7 @@
 
 	
 <body>
-	
+
 <!--	------Sidebar------>
 <nav role="navigation">
   <div id="menuToggle">
@@ -74,11 +74,11 @@
 	</div>
 	
 </div>
-
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="assets/js/blog.js"></script>	
 <script src="assets/js/sidebar.js"></script>
+<script src="assets/models/post.js"></script>
 	
 </body>
 	
