--- a/public/cms.html
+++ b/public/cms.html
@@ -72,7 +72,7 @@
 	</div>
 	
 	<!-- Custom Script -->
-	<script src="js/cms.js" type="text/javascript"></script>
+	<script src="assets/js/cms.js"></script>
 	<script src="assets/js/sidebar.js">
 
 </body>
