--- a/public/blog.html
+++ b/public/blog.html
@@ -24,7 +24,8 @@
 	</head>
 
 	
-<body>
+<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
+}">
 
 <!--	------Sidebar------>
 <nav role="navigation">
@@ -50,8 +51,8 @@
 
 <div class="container">
 	<div class="row top-30" id="topBar">
-		<div class="col-md-6"></div>
-		<div class="col-md-4" id="dropDown">
+		<div class="col-md-4"></div>
+		<div class="col-md-6" id="dropDown">
 			<div class="form-group">
 				<select class="form-control" id="category">
 				<option selected value="">All Categories</option>
@@ -78,7 +79,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="assets/js/blog.js"></script>	
 <script src="assets/js/sidebar.js"></script>
-<script src="assets/models/post.js"></script>
+
 	
 </body>
 	
