--- a/public/blog.html
+++ b/public/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title></title>
+		<title>Life Best Lived</title>
 			
 			<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>	
 		
@@ -24,8 +24,7 @@
 	</head>
 
 	
-<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
-}">
+<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;">
 
 <!--	------Sidebar------>
 <nav role="navigation">
