--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title></title>
+		<title>Life Best Lived</title>
 			
 			<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>	
 		
 			<link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
 			
+			<link rel = "stylesheet" type = "text/css" href = "assets/css/recipes.css"/>
+		
 			<link href="https://fonts.googleapis.com/css?family=Dancing+Script|News+Cycle|Quicksand" rel="stylesheet">
 		
 <!----------------------bootstrap----------------------------------------------------------->
@@ -24,7 +26,8 @@
 	</head>
 
 	
-<body>
+<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
+}">
 	
 <!--	------Sidebar------>
 <nav role="navigation">
@@ -47,9 +50,18 @@
   </div>
 </nav>
 <!--------end------->
-	
-
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-6"></div>
+		<div class="col-md-2"></div>
+		<div class="col-md-4" id="searchBar">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+    <button class="btn btn-default" type="submit">Search</button>
+  </form>
+		</div>
+	</div>
+</div>
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="assets/js/blog.js"></script>	
