Mel's Files, style WIP

--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -29,27 +29,28 @@
 <body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
 }">
 	
-<!--	------Sidebar------>
-<nav role="navigation">
-  <div id="menuToggle">
+  <!--	------Sidebar------>
+		<nav role="navigation">
+		  <div id="menuToggle">
 
-    <input type="checkbox" />
-   
-    <span></span>
-    <span></span>
-    <span></span>
-    
+			<input type="checkbox" />
 
-    <ul id="menu">
-      <a href=""><li>Home</li></a>
-      <a href="../public/blog.html"><li>Blog</li></a>
-      <a href="#"><li>Events</li></a>
-      <a href="../public/Recipes.html"><li>Recipes</li></a>
-    </ul>
-	  
-  </div>
-</nav>
+			<span></span>
+			<span></span>
+			<span></span>
+
+
+			<ul id="menu">
+			  <a href="../public/index.html"><li>Home</li></a>
+			  <a href="../public/about.html"><li>About</li></a>
+			  <a href="../public/blog.html"><li>Blog</li></a>
+			  <a href="../public/events.html"><li>Events</li></a>
+			  <a href="../public/Recipes.html"><li>Recipes</li></a>
+			</ul>
+		  </div>
+		</nav>
 <!--------end------->
+	
 <div class="container">
 	<div class="row">
 		<div class="col-md-6"></div>
