--- a/public/blog.html
+++ b/public/blog.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Life Best Lived</title>
 			
-			<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>	
+			<link rel="stylesheet" type="text/css" href="assets/css/blogstyle.css"/>	
 		
 			<link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
 			
@@ -26,25 +26,26 @@
 	
 <body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;">
 
-<!--	------Sidebar------>
-<nav role="navigation">
-  <div id="menuToggle">
+  <!--	------Sidebar------>
+		<nav role="navigation">
+		  <div id="menuToggle">
 
-    <input type="checkbox" />
-   
-    <span></span>
-    <span></span>
-    <span></span>
-    
+			<input type="checkbox" />
 
-    <ul id="menu">
-      <a href=""><li>Home</li></a>
-      <a href="../public/blog.html"><li>Blog</li></a>
-      <a href="#"><li>Events</li></a>
-      <a href="../public/Recipes.html"><li>Recipes</li></a>
-    </ul>
-  </div>
-</nav>
+			<span></span>
+			<span></span>
+			<span></span>
+
+
+			<ul id="menu">
+			  <a href="../public/index.html"><li>Home</li></a>
+			  <a href="../public/about.html"><li>About</li></a>
+			  <a href="../public/blog.html"><li>Blog</li></a>
+			  <a href="../public/events.html"><li>Events</li></a>
+			  <a href="../public/Recipes.html"><li>Recipes</li></a>
+			</ul>
+		  </div>
+		</nav>
 <!--------end------->
 	
 
