--- a/public/cms.html
+++ b/public/cms.html
@@ -24,25 +24,27 @@
 <html>
 <body>
 	
-<!--	------Sidebar------>
-<nav role="navigation">
-  <div id="menuToggle">
+  <!--	------Sidebar------>
+		<nav role="navigation">
+		  <div id="menuToggle">
 
-    <input type="checkbox" />
-   
-    <span></span>
-    <span></span>
-    <span></span>
-    
-  
-    <ul id="menu">
-      <a href="#"><li>Home</li></a>
-      <a href="../public/blog.html"><li>Blog</li></a>
-      <a href="#"><li>Events</li></a>
-      <a href="../public/Recipes.html"><li>Recipes</li></a>
-    </ul>
-  </div>
-</nav>
+			<input type="checkbox" />
+
+			<span></span>
+			<span></span>
+			<span></span>
+
+
+			<ul id="menu">
+			  <a href="../public/index.html"><li>Home</li></a>
+			  <a href="../public/about.html"><li>About</li></a>
+			  <a href="../public/blog.html"><li>Blog</li></a>
+			  <a href="../public/events.html"><li>Events</li></a>
+			  <a href="../public/Recipes.html"><li>Recipes</li></a>
+			</ul>
+		  </div>
+		</nav>
+<!--------end------->
 	
 	
 	<div class="container">
