--- a/public/cms.html
+++ b/public/cms.html
@@ -36,11 +36,11 @@
 
 
 			<ul id="menu">
-			  <a href="../public/index.html"><li>Home</li></a>
-			  <a href="../public/about.html"><li>About</li></a>
-			  <a href="../public/blog.html"><li>Blog</li></a>
-			  <a href="../public/events.html"><li>Events</li></a>
-			  <a href="../public/Recipes.html"><li>Recipes</li></a>
+			  <a href="/index"><li>Home</li></a>
+			  <a href="/about"><li>About</li></a>
+			  <a href="/blog"><li>Blog</li></a>
+			  <a href="/events"><li>Events</li></a>
+			  <a href="/recipes"><li>Recipes</li></a>
 			</ul>
 		  </div>
 		</nav>
