--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,13 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-6">
                 <div id="box">
-                <p><a href="../public/about.html">About</a></p>
+                <p><a href="/about">About</a></p>
                 <hr>
-                <p><a href="../public/blog.html">Blog</a></p>
+                <p><a href="/blog">Blog</a></p>
                 <hr>
-                <p><a href="../public/events.html">Events</a></p>
+                <p><a href="events">Events</a></p>
                 <hr>
-                <p><a href="../public/recipes.html">Recipes</a></p>
+                <p><a href="/recipes">Recipes</a></p>
            </div></div>
                 <div class="col-md-2"></div>
             </div>        
