test posting of blog

--- a/public/blog.html
+++ b/public/blog.html
@@ -64,7 +64,7 @@
 		</div>
 
 	<div class="col-md-2">
-		<a class="btn btn-default" id="npBtn" href="../public/cms.html">New Post</a>
+		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
 	</div>
 
 </div>
