--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -58,7 +58,7 @@
 		<div class="col-md-4" id="searchBar">
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-    <button class="btn btn-default" type="submit">Search</button>
+    <button class="btn btn-default" type="submit" id="btns">Search</button>
   </form>
 		</div>
 	</div>
