fixed background image

--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -26,7 +26,7 @@
 	</head>
 
 	
-<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
+<body style="background-image: url('assets/images/placeholder.jpg');
 }">
 	
   <!--	------Sidebar------>
