--- a/public/blog.html
+++ b/public/blog.html
@@ -24,7 +24,7 @@
 	</head>
 
 	
-<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;">
+<body style="background-image: url('assets/img/placeholder.jpg');">
 
   <!--	------Sidebar------>
 		<nav role="navigation">
