--- a/public/about.html
+++ b/public/about.html
@@ -52,10 +52,11 @@
 <!-----------------------Beginning of jumbotron----------------	-->
 <div class="row">
 	
-	<div class="col-md-4"></div>
+	<div class="col-md-3"></div>
 	
-	<div class="col-md-5">
+	<div class="col-md-6">
 		<div class="animated fadeIn" id="jumbotron">
+            <div id="header">About Us</div>
 				<div class="jumbotron" style="background: rgba(255,255,255,0.5);">
 					<h1 class="display-3" id="header">Life Best Lived!</h1>
 					<br>
