--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -26,7 +26,7 @@
 	</head>
 
 	
-<body style="background-image: url('../public/assets/images/placeholder.jpg'); background-repeat: no-repeat;
+<body style="background-image: url('assets/images/bees.jpeg'); background-repeat: no-repeat;
 }">
 	
   <!--	------Sidebar------>
@@ -52,20 +52,34 @@
 <!--------end------->
 	
 <div class="container">
+	<div class="row top-30" id="topBar">
+		<div class="col-md-4"></div>
+		<div class="col-md-6" id="dropDown">
+			<div class="form-group">
+				<select class="form-control" id="category">
+				<option selected value="">All Categories</option>
+				<option value="Vegetarian">Vegetarian</option>
+				<option value="Vegan">Vegan</option>
+				<!--            <option value=""></option>-->
+				</select>
+			</div>
+		</div>
+
+	<div class="col-md-2">
+		<a class="btn btn-default" id="btns" href="/recipecms.html">New Post</a>
+	</div>
+
+</div>
+
 	<div class="row">
-		<div class="col-md-6"></div>
-		<div class="col-md-2"></div>
-		<div class="col-md-4" id="searchBar">
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-    <button class="btn btn-default" type="submit" id="btns">Search</button>
-  </form>
+		<div class="col-md-12 blog-container">
 		</div>
 	</div>
+	
 </div>
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="assets/js/blog.js"></script>	
+<script src="assets/js/recipe.js"></script>	
 <script src="assets/js/sidebar.js"></script>
 	
 </body>
