--- a/public/about.html
+++ b/public/about.html
@@ -23,7 +23,7 @@
         
     </head>
     
-<body style="background-image: url(assets/img/placeholder.jpg)">
+<body id="bg" style="background-image: url(assets/images/bees.jpeg);">
 	
 <!------------Sidebar------>
 		<nav role="navigation">
