--- a/public/recipecms.html
+++ b/public/recipecms.html
@@ -2,11 +2,9 @@
 <html lang="en">
 	<head>
 		<title>Life Best Lived</title>
-			
-			<link rel="stylesheet" type="text/css" href="assets/css/blogstyle.css"/>	
 		
 			<link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
-			
+			<link rel="stylesheet" type="text/css" href="assets/css/adminstyle.css"/>
 			<link href="https://fonts.googleapis.com/css?family=Dancing+Script|News+Cycle|Quicksand" rel="stylesheet">
 		
 <!----------------------bootstrap----------------------------------------------------------->
@@ -22,10 +20,10 @@
 
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-
 	
+<html>
 <body>
-
+	
   <!--	------Sidebar------>
 		<nav role="navigation">
 		  <div id="menuToggle">
@@ -48,39 +46,37 @@
 		</nav>
 <!--------end------->
 	
-
-<div class="container">
-	<div class="row top-30" id="topBar">
-		<div class="col-md-4"></div>
-		<div class="col-md-6" id="dropDown">
-			<div class="form-group">
-				<select class="form-control" id="category">
-				<option selected value="">All Categories</option>
-				<option value="Recipe">Recipe</option>
-				<option value="Personal">Personal</option>
-				<!--            <option value=""></option>-->
-				</select>
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-3">
+				<form id="cms">
+					<div class="form-group">
+						<label for="title">Title:</label>
+						<input type="text" class="form-control" id="title">
+						<br />
+						<label for="body">Body:</label>
+						<textarea class="form-control" rows="10" id="body"></textarea>
+						<div class="form-group">
+							<label for="category">Select Category:</label>
+							<select class="form-control" id="category">
+						    <option value="Vegetarian">Vegetarian</option>
+						    <option value="Vegan">Vegan</option>
+<!--						    <option value=""></option>-->
+  						</select>
+						</div>
+						<br />
+						<button type="submit" class="btn btn-success submit">Submit</button>
+					</div>
+				</form>
 			</div>
 		</div>
-
-	<div class="col-md-2">
-		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
-	</div>
-
-</div>
-
-	<div class="row">
-		<div class="col-md-12 blog-container">
-		</div>
 	</div>
 	
-</div>
-	
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="assets/js/blog.js"></script>	
-<script src="assets/js/sidebar.js"></script>
+	<!-- Custom Script -->
+	<script src="assets/js/recipecms.js"></script>
+	<script src="assets/js/sidebar.js">
 
-	
 </body>
-	
+
 </html>
