Mobile responsive but BACKGROUND ISSUE AGAIN!

--- a/public/about.html
+++ b/public/about.html
@@ -48,16 +48,16 @@
 <!--------end------->
 	
 
-	
+
 <!-----------------------Beginning of jumbotron----------------	-->
+	
 <div class="row">
 	
 	<div class="col-md-3"></div>
 	
 	<div class="col-md-6">
 		<div class="animated fadeIn" id="jumbotron">
-            <div id="header">About Us</div>
-				<div class="jumbotron" style="background: rgba(255,255,255,0.5);">
+           <div class="jumbotron">
 					<h1 class="display-3" id="header">Life Best Lived!</h1>
 					<br>
 					<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
