--- a/public/blog.html
+++ b/public/blog.html
@@ -51,8 +51,8 @@
 
 <div class="container">
 	<div class="row top-30" id="topBar">
-		<div class="col-md-4"></div>
-		<div class="col-md-6" id="dropDown">
+		<div class="col-md-4 col-sm-2"></div>
+		<div class="col-md-6 col-sm-4" id="dropDown">
 			<div class="form-group">
 				<select class="form-control" id="category">
 				<option selected value="">All Categories</option>
@@ -63,16 +63,18 @@
 			</div>
 		</div>
 
-	<div class="col-md-2">
+	<div class="col-md-2 col-sm-2">
 		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
 	</div>
 
 </div>
 
+<div class="div" id="box">
 	<div class="row">
 		<div class="col-md-12 blog-container">
 		</div>
 	</div>
+</div>	
 	
 </div>
 	
