changed opaque boxes to white, text have shadow and are legible, Issues with background scale in mobile

--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -50,7 +50,7 @@
 		</nav>
 <!--------end------->
 	
-     <header>Receipes</header>
+     <header>Recipes</header>
 <div class="container">
 
     <div id= "flatbread">
