--- a/public/blog.html
+++ b/public/blog.html
@@ -52,16 +52,8 @@
 <div class="container">
 	<div class="row top-30" id="topBar">
 		<div class="col-md-4 col-sm-2"></div>
-		<div class="col-md-6 col-sm-4" id="dropDown">
-			<div class="form-group">
-				<select class="form-control" id="category">
-				<option selected value="">All Categories</option>
-				<option value="Recipe">Recipe</option>
-				<option value="Personal">Personal</option>
-				<!--            <option value=""></option>-->
-				</select>
-			</div>
-		</div>
+		<div class="col-md-6 col-sm-2"></div>
+		
 
 	<div class="col-md-2 col-sm-2">
 		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
@@ -71,7 +63,7 @@
 
 <div class="div" id="box">
 	<div class="row">
-		<div class="col-md-12 blog-container">
+		<div class="col-md-12 blog-container" id="post">
 		</div>
 	</div>
 </div>	
