style updates, about us re-added

--- a/public/about.html
+++ b/public/about.html
@@ -50,7 +50,12 @@
 
 
 <!-----------------------Beginning of jumbotron----------------	-->
-	
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4"><h2 id="title">About us</h2></div>
+		<div class="col-md-4"></div>
+	</div>
+
 <div class="row">
 	
 	<div class="col-md-3"></div>
