--- a/public/about.html
+++ b/public/about.html
@@ -42,9 +42,12 @@
 			  <a href="/blog"><li>Blog</li></a>
 			  <a href="/events"><li>Events</li></a>
 			  <a href="/recipes"><li>Recipes</li></a>
+			
 			</ul>
 		  </div>
+			
 		</nav>
+	
 <!--------end------->
 	
 
@@ -80,6 +83,6 @@
 <script src="assets/js/sidebar.js"></script>
 
 	
-
+  <footer><small>&copy; Copyright 2017, Life Best Lived</small></footer>
 </body>
 </html>
