--- a/public/blog.html
+++ b/public/blog.html
@@ -24,7 +24,7 @@
 	</head>
 
 	
-<body >
+<body id="bg" style="background-image: url(assets/images/bees.jpeg);">
 
   <!--	------Sidebar------>
 		<nav role="navigation">
