--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -51,6 +51,7 @@
 <!--------end------->
 	
      <header>Recipes</header>
+	
 <div class="container">
 
     <div id= "flatbread">
@@ -77,5 +78,7 @@
 <script src="assets/js/sidebar.js"></script>
 	
 </body>
+	
+<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
 	
 </html>
