--- a/public/about.html
+++ b/public/about.html
@@ -83,6 +83,7 @@
 <script src="assets/js/sidebar.js"></script>
 
 	
-  <footer><small>&copy; Copyright 2017, Life Best Lived</small></footer>
+  
 </body>
+	<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
 </html>
