commented out blog. added userblog (user side view). temporary comment box while i figure out how to do a better one. mediaqueries to be added tonight.

--- a/public/Recipes.html
+++ b/public/Recipes.html
@@ -28,7 +28,7 @@
 
 <body style="background-image: url('assets/images/bees.jpeg'); background-repeat: no-repeat;">
 	
-  <!--	------Sidebar------>
+<!------------Sidebar------>
 		<nav role="navigation">
 		  <div id="menuToggle">
 
@@ -42,13 +42,17 @@
 			<ul id="menu">
 			  <a href="/index"><li>Home</li></a>
 			  <a href="/about"><li>About</li></a>
-			  <a href="/blog"><li>Blog</li></a>
+			  <a href="/userBlog"><li>Blog</li></a>
 			  <a href="/events"><li>Events</li></a>
 			  <a href="/recipes"><li>Recipes</li></a>
+			
 			</ul>
 		  </div>
+			
 		</nav>
+	
 <!--------end------->
+	
 	
      <header>Recipes</header>
 	
