--- a/public/events.html
+++ b/public/events.html
@@ -23,7 +23,7 @@
     
   <body style="background-image: url(assets/images/bees.jpeg)">
 
-  <!--	------Sidebar------>
+<!------------Sidebar------>
 		<nav role="navigation">
 		  <div id="menuToggle">
 
@@ -37,13 +37,17 @@
 			<ul id="menu">
 			  <a href="/index"><li>Home</li></a>
 			  <a href="/about"><li>About</li></a>
-			  <a href="/blog"><li>Blog</li></a>
+			  <a href="/userBlog"><li>Blog</li></a>
 			  <a href="/events"><li>Events</li></a>
 			  <a href="/recipes"><li>Recipes</li></a>
+			
 			</ul>
 		  </div>
+			
 		</nav>
+	
 <!--------end------->
+	
         
 <header>Events</header>      
 
