--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                 <div id="box">
                 <p><a href="/about">About</a></p>
                 <hr>
-                <p><a href="/blog">Blog</a></p>
+                <p><a href="/userBlog">Blog</a></p>
                 <hr>
                 <p><a href="events">Events</a></p>
                 <hr>
