--- a/public/userBlog.html
+++ b/public/userBlog.html
@@ -3,11 +3,17 @@
 	<head>
 		<title>Life Best Lived</title>
 			
-			<link rel="stylesheet" type="text/css" href="assets/css/blogstyle.css"/>	
+			<link rel="stylesheet" type="text/css" href="assets/css/userBlog.css"/>	
 		
 			<link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
 			
+			<link rel="stylesheet" type="text/css" href="assets/css/commentbox.css"/>	
+			
 			<link href="https://fonts.googleapis.com/css?family=Dancing+Script|News+Cycle|Quicksand" rel="stylesheet">
+		
+			<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+			
 		
 <!----------------------bootstrap----------------------------------------------------------->
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -19,6 +25,8 @@
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 		
 			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	
+			
 
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -26,7 +34,7 @@
 	
 <body id="bg" style="background-image: url(assets/images/bees.jpeg);">
 
-  <!--	------Sidebar------>
+<!------------Sidebar------>
 		<nav role="navigation">
 		  <div id="menuToggle">
 
@@ -40,45 +48,79 @@
 			<ul id="menu">
 			  <a href="/index"><li>Home</li></a>
 			  <a href="/about"><li>About</li></a>
-			  <a href="/blog"><li>Blog</li></a>
+			  <a href="/userBlog"><li>Blog</li></a>
 			  <a href="/events"><li>Events</li></a>
 			  <a href="/recipes"><li>Recipes</li></a>
+			
 			</ul>
 		  </div>
+			
 		</nav>
+	
 <!--------end------->
-	
-<!-- open again when doing admin side blog page
-
 <div class="container">
-	<div class="row top-30" id="topBar">
-		<div class="col-md-4 col-sm-2"></div>
-		<div class="col-md-6 col-sm-2"></div>
-		
-
-	<div class="col-md-2 col-sm-2">
-		<a class="btn btn-default" id="npBtn" href="/cms">New Post</a>
-	</div>
-
-</div>
--->
-<!--
-
-<div class="div" id="box">
 	<div class="row">
-		<div class="col-md-12 blog-container" id="post">
-		</div>
+		<div class="col-md-6 col-sm-6"></div>
+		<div class="col-md-6 col-sm-6"></div>
+		<div class="col-md-6 col-sm-6"></div>
+
+
 	</div>
-</div>	
--->
+</div>
 	
-<!--</div>-->
+ <div class="container">
+
+	 <div class="row">
+		 <div class="col-md-6 col-sm-4" id="posts">
+			<div class="card" style="width: 20rem;">
+				<img class="card-img-top" src="../assets/images/detoxwater.jpeg" alt="Card image cap">
+				<div class="card-body">
+				<h4 class="card-title">The Benefits of Detox Waters</h4>
+				<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<a href="#" class="btn btn-primary" id="postbtn">See post</a>
+			</div>
+		 </div>
+		</div>
+		  <div class="col-md-6 col-sm-4"></div>
+	 </div>
+	 
+</div>
 	
+<!----------------------------comment box---------------------------------->
+	
+<div class="container" id="commentArea">
+	<div class="row">
+		<div class="col-md-4 col-sm-6"></div>
+		
+		<div class="col-md-4 col-sm-6">
+			<div class="card">
+				
+				<div class="card-body">
+					<p id="para"></p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-4 col-sm-3">
+			<div class="card">
+				<div class="card-body">
+					<form>
+					<textarea id="words">Enter comment</textarea>
+					<input type="button" onclick="getwords()" value="Enter" /> <br>
+					</form>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
+	
+<!--	calling javascript files-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="assets/js/blog.js"></script>	
+<script src="assets/js/comments.js"></script>
 <script src="assets/js/sidebar.js"></script>
 
-	
+
 </body>
 
 <footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
