--- a/public/about.html
+++ b/public/about.html
@@ -8,12 +8,15 @@
 	
 
     <link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
+		
 	<link rel="stylesheet" type="text/css" href="assets/css/aboutus.css"/>
+		
 	  
 
 		
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand" rel="stylesheet">       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand" rel="stylesheet">       
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
         
   
 		
@@ -55,7 +58,7 @@
 <!-----------------------Beginning of jumbotron----------------	-->
 	<div class="row">
 		<div class="col-md-4"></div>
-		<div class="col-md-4"><h2 id="title">About us</h2></div>
+		<div class="col-md-4"><h2 id="title" class="animated rollIn">About us</h2></div>
 		<div class="col-md-4"></div>
 	</div>
 
