--- a/public/events.html
+++ b/public/events.html
@@ -8,7 +8,10 @@
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/events.css">
 		
-    <link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/> 
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/sidebar.css"/>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
         
 		
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -49,7 +52,7 @@
 <!--------end------->
 	
         
-<header>Events</header>      
+<header class="animated rollIn">Events</header>      
 
 <div class="container">
 
