--- a/public/userBlog.html
+++ b/public/userBlog.html
@@ -90,9 +90,9 @@
 	
 <div class="container" id="commentArea">
 	<div class="row">
-		<div class="col-md-4 col-sm-6"></div>
+<!--		<div class="col-md-4 col-sm-6"></div>-->
 		
-		<div class="col-md-4 col-sm-6">
+		<div class="col-md-8 col-sm-6">
 			<div class="card">
 				
 				<div class="card-body">
