--- a/public/about.html
+++ b/public/about.html
@@ -88,5 +88,5 @@
 	
   
 </body>
-	<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
+	<footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
 </html>
