--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
         </div>
 </body>
 	
-<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
+<footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
 	
 </html>
