--- a/public/blog.html
+++ b/public/blog.html
@@ -81,5 +81,5 @@
 	
 </body>
 
-<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
+<footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
 </html>
