--- a/public/events.html
+++ b/public/events.html
@@ -66,6 +66,6 @@
         
  </body>
 	
-<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
+<footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
 	
 </html>
