--- a/public/userBlog.html
+++ b/public/userBlog.html
@@ -123,5 +123,5 @@
 
 </body>
 
-<footer><p>&copy; Copyright 2017, Life Best Lived</p></footer>
+<footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com </p></footer>
 </html>
