--- a/public/about.html
+++ b/public/about.html
@@ -24,6 +24,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>    
         
+
     </head>
     
 <body id="bg" style="background-image: url(assets/images/bees.jpeg);">
@@ -71,9 +72,16 @@
            <div class="jumbotron">
 					<h1 class="display-3" id="header">Life Best Lived!</h1>
 					<br>
-					<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+					<p class="lead">
+</p>
 					<hr class="my-4">
-					<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+					<p>Hello,
+                        <br>
+                        <br>
+                        Welcome to Life Best Lived!  Let me introduce myself.  My name is Tina Morgan I am a registered  nurse with 20 years experience.  I am a Master level Reiki practioner, I am certified Holistic Nutritionist and most importantly wife to my husband of 18 years and mother to 3 fabulous kids.<br>
+                        We all want to live a long and healthy life. For some this is easy to do, for others it is a challenge.  Here at Life Best Lived we understand that everyone is at a different stage in this journey.  We are her to help you along the way.  Weither you want to make major changes in your lifestyle or just small ones we got you!<br>
+                        We believe in everyone living thier best life, whatever that may be.<br>
+                        We would like to officially congratulate you on your journey!</p>
 				</div>
 		</div>
   </div>
