--- a/public/events.html
+++ b/public/events.html
@@ -41,7 +41,7 @@
 			<ul id="menu">
 			  <a href="/index"><li>Home</li></a>
 			  <a href="/about"><li>About</li></a>
-			  <a href="/userBlog"><li>Blog</li></a>
+			  <a href="/blog"><li>Blog</li></a>
 			  <a href="/events"><li>Events</li></a>
 			  <a href="/recipes"><li>Recipes</li></a>
 			
