--- a/public/blog.html
+++ b/public/blog.html
@@ -48,7 +48,7 @@
 		</nav>
 <!--------end------->
 	
-<!-- open again when doing admin side blog page
+
 
 <div class="container">
 	<div class="row top-30" id="topBar">
@@ -61,8 +61,6 @@
 	</div>
 
 </div>
--->
-<!--
 
 <div class="div" id="box">
 	<div class="row">
@@ -70,12 +68,20 @@
 		</div>
 	</div>
 </div>	
--->
-	
-<!--</div>-->
+<!--comment section-->
+    <form>
+    User Name:<br>
+    <input type="text" name="userName" placeholder="Enter Your User Name">
+        <br>
+    Comments:<br>
+    <input type="text" Name="comment" placeholder="Enter your Comment">
+        <br>
+    <input type="submit" id="cSubmit">
+    </form>
+</div>
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="assets/js/blog.js"></script>	
+<script src="assets/js/blogs.js"></script>	
 <script src="assets/js/sidebar.js"></script>
 
 	
