--- a/public/blog.html
+++ b/public/blog.html
@@ -71,10 +71,10 @@
 <!--comment section-->
     <form>
     User Name:<br>
-    <input type="text" name="userName" placeholder="Enter Your User Name">
+    <input type="text" name="userName" placeholder="Enter Your User Name" id="user">
         <br>
     Comments:<br>
-    <input type="text" Name="comment" placeholder="Enter your Comment">
+        <textarea type="text" Name="comment" rows="4" cols="50" placeholder="Enter your Comment" id="body"></textarea>
         <br>
     <input type="submit" id="cSubmit">
     </form>
@@ -83,6 +83,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="assets/js/blogs.js"></script>	
 <script src="assets/js/sidebar.js"></script>
+    <script type="text/javascript" src="assets/js/comments.js"></script>
+    <script type="text/javascript" src="assets/js/commentcms.js"></script>
 
 	
 </body>
