--- a/public/about.html
+++ b/public/about.html
@@ -78,10 +78,10 @@
 					<p>Hello,
                         <br>
                         <br>
-                        Welcome to Life Best Lived!  Let me introduce myself.  My name is Tina Morgan I am a registered  nurse with 20 years experience.  I am a Master level Reiki practioner, I am certified Holistic Nutritionist and most importantly wife to my husband of 18 years and mother to 3 fabulous kids.<br>
-                        We all want to live a long and healthy life. For some this is easy to do, for others it is a challenge.  Here at Life Best Lived we understand that everyone is at a different stage in this journey.  We are her to help you along the way.  Weither you want to make major changes in your lifestyle or just small ones we got you!<br>
-                        We believe in everyone living thier best life, whatever that may be.<br>
-                        We would like to officially congratulate you on your journey!</p>
+                        Welcome to Life Best Lived!  Please allow me to introduce myself, my name is Tina Morgan I am a registered  nurse with 20 years experience.  I am a Master level Reiki practioner and a  certified Holistic Nutritionist.  Most importantly wife to my husband of 18 years and mother to 3 fabulous kids.<br>
+                        We all want to live a long and healthy life.  For some this is easy to do, for others it is a challenge.  Here at Life Best Lived we understand that everyone is at a different stage in this journey.  We can help with all your lifestyle changes big or small.<br>
+                        We believe in everyone living their best life, whatever that may be.<br>
+                        We would like to officially congratulate you on your choice to live the Life Best Lived.</p>
 				</div>
 		</div>
   </div>
