--- a/public/blog.html
+++ b/public/blog.html
@@ -68,6 +68,13 @@
 		</div>
 	</div>
 </div>	
+    <br>
+    <div class="div" id="box">
+	<div class="row">
+		<div class="col-md-12 comment-container" id="post">
+		</div>
+	</div>
+</div>	
 <!--comment section-->
     <form>
     User Name:<br>
