fixed no comments text

--- a/public/blog.html
+++ b/public/blog.html
@@ -71,7 +71,7 @@
     <br>
     <div class="div" id="box">
 	<div class="row">
-		<div class="col-md-12 comment-container" id="post">
+		<div class="col-md-12 comment-container" >
 		</div>
 	</div>
 </div>	
