--- a/public/recipecms.html
+++ b/public/recipecms.html
@@ -73,10 +73,12 @@
 		</div>
 	</div>
 	
+    <footer><p>&copy; Copyright 2017, Life Best Lived. Email us at lblived@gmail.com</p></footer>
+    
 	<!-- Custom Script -->
 	<script src="assets/js/recipecms.js"></script>
-	<script src="assets/js/sidebar.js">
-
+    <script src="assets/js/sidebar.js"></script>
+        
 </body>
 
 </html>
